--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,43 @@
 @import "@fontsource/roboto/500.css";
 @import "@fontsource/roboto/700.css";
 
-* {
+html {
+  scroll-behavior: smooth;
+}
+
+body {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+:focus {
+  outline: none !important;
+}
+
+@media screen and (max-width: 640px) {
+  body,
+  html {
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 }
 
 .home-slicker-image {
   filter: brightness(73%);
   -webkit-filter: brightness(73%);
   -moz-filter: brightness(73%);
+}
+
+.slick-prev:before, .slick-next:before {
+  color:black;
 }
