--- a/src/index.css
+++ b/src/index.css
@@ -50,27 +50,9 @@ body {
   align-items: center;
 }
 
-
-/* Custom slicker arrow styling */
 .custom-prev-arrow,
 .custom-next-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.5);
-  color: #fff;
+  background-color: rgba(211, 204, 204, 0.5);
   padding: 5px 10px;
   border-radius: 50%;
-  cursor: pointer;
-  z-index: 1;
 }
-
-.custom-prev-arrow {
-  left: 10px;
-}
-
-.custom-next-arrow {
-  right: 10px;
-}
-
-
