productDetail Page Integration

--- a/src/index.css
+++ b/src/index.css
@@ -40,20 +40,30 @@ body {
   -moz-filter: brightness(73%);
 }
 
-.slick-prev:before,
-.slick-next:before {
-  color: black;
-}
-
-.category-slider {
-  display: flex;
-  align-items: center;
-}
-
 .custom-prev-arrow,
 .custom-next-arrow {
   background-color: rgba(211, 204, 204, 0.5);
   padding: 5px 10px;
   border-radius: 50%;
+  margin-right: 20px;
 }
 
+.slick-track {
+  margin: 0;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: #57ccb5;
+  opacity: 1;
+  font-size: 2rem;
+}
+
+.slick-prev {
+  left: -45px;
+}
+
+/* .slick-slide {
+  display: flex !important;
+  justify-content: center;
+} */
