--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "@fontsource/roboto/400.css";
 @import "@fontsource/roboto/500.css";
 @import "@fontsource/roboto/700.css";
+@import "./theme/loader.css";
 
 html {
   scroll-behavior: smooth;
