--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @import "@fontsource/roboto/500.css";
 @import "@fontsource/roboto/700.css";
 @import "./theme/loader.css";
+@import "./theme/fonts/font.css";
+
 
 html {
   scroll-behavior: smooth;
